# TestCpp

./: .clang-format  .gitignore  CMakeLists.txt  automake.sh
src/: Test.cpp  oldcode.cpp  test_mem_struct.cpp
